[package]
name = "hiddenlink"
version = "1.1.1"
description = "A simple tunnel which tries to hide itself inside of other protocols"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
repository = "https://github.com/KonishchevDmitry/hiddenlink"
license = "GPL-3.0+"
edition = "2021"

[lints.clippy]
assigning_clones = "allow"
new-ret-no-self = "allow"
precedence = "allow"
too-many-arguments = "allow"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
aes = "0.8"
async-trait = "0.1.88"
axum = "0.8.1"
base64 = "0.22.1"
bitflags = "2.9.0"
bytes = "1.10.1"
clap = "4.5.32"
const_format = "0.2.34"
easy-logging = "1.0.0"
host-port-pair = "0.2.2"
humantime-serde = "1.1.1"
itertools = "0.14.0"
libc = "0.2.171"
log = "0.4.26"
nix = { version = "0.29.0", features = ["ioctl", "resource", "socket"] }
num = "0.4.3"
pktparse = "0.7.1"
prometheus-client = "0.23.1"
rand = "0.9.0"
rustls = "0.23.25"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.34"
shadowsocks-crypto = { version = "0.6.1", features = ["v2"] }
socket2 = "0.5.8"
thiserror = "2.0.12"
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26.2"
tokio-tun = "0.13.2"
tower-http = { version = "0.6", features = ["compression-full"] }
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive", "unic"] }
x509-parser = "0.17.0"

[target.'cfg(target_env = "musl")'.dependencies]
aws-lc-rs = { version = "1.12.6", features = ["bindgen"] }

[build-dependencies]
bindgen = "0.71.1"

[dev-dependencies]
matches = "0.1.10"
rstest = "0.25.0"
shadowsocks = { version = "1.23.0", features = ["aead-cipher-2022"] }
