[package]
name = "hiddenlink"
version = "1.2.0"
description = "A simple tunnel which tries to hide itself inside of other protocols"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
repository = "https://github.com/KonishchevDmitry/hiddenlink"
license = "GPL-3.0+"
edition = "2024"

[lints.clippy]
assigning_clones = "allow"
collapsible-if = "allow"
new-ret-no-self = "allow"
precedence = "allow"
too-many-arguments = "allow"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
aes = "0.8"
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
bitflags = "2.10.0"
bytes = "1.10.1"
clap = "4.5.51"
const_format = "0.2.35"
easy-logging = "1.1.0"
host-port-pair = "0.2.2"
humansize = "2.1.3"
humantime-serde = "1.1.1"
itertools = "0.14.0"
libc = "0.2.177"
log = "0.4.28"
mime = "0.3.16"
nix = { version = "0.30.1", features = ["ioctl", "resource", "socket"] }
num = "0.4.3"
pktparse = "0.7.1"
prometheus-client = "0.24.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["brotli", "deflate", "gzip", "hickory-dns", "native-tls-vendored", "zstd"] }
rustls = "0.23.34"
rustls-native-certs = "0.8.2"
rustls-pemfile = "2.2.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shadowsocks-crypto = { version = "0.6.1", features = ["v2"] }
socket2 = "0.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26.4"
tokio-tun = "0.15.0"
tower-http = { version = "0.6", features = ["compression-full"] }
url = { version = "2.5.8", features = ["serde"] }
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive", "unic"] }
x509-parser = "0.18.0"

[target.'cfg(target_env = "musl")'.dependencies]
aws-lc-rs = { version = "1.14.1", features = ["bindgen"] }

[build-dependencies]
bindgen = "0.72.1"

[dev-dependencies]
matches = "0.1.10"
rstest = "0.26.1"
shadowsocks = { version = "1.23.2", features = ["aead-cipher-2022"] }
