[package]
name = "hiddenlink"
version = "1.4.5"
description = "A simple tunnel which tries to hide itself inside of other protocols"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
repository = "https://github.com/KonishchevDmitry/hiddenlink"
license = "GPL-3.0+"
edition = "2024"

[lints.clippy]
assigning_clones = "allow"
collapsible-if = "allow"
new-ret-no-self = "allow"
precedence = "allow"
too-many-arguments = "allow"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
aes = "0.9"
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22.1"
bitflags = "2.11.1"
bytes = "1.11.1"
clap = "4.6.1"
const_format = "0.2.35"
easy-logging = "1.1.0"
hex = "0.4.3"
host-port-pair = "0.2.2"
html5ever = "0.39.0"
humansize = "2.1.3"
humantime-serde = "1.1.1"
itertools = "0.14.0"
libc = "0.2.185"
log = "0.4.29"
mime = "0.3.17"
mini-moka = "0.10.3"
nix = { version = "0.31.2", features = ["ioctl", "resource", "socket"] }
num = "0.4.3"
pktparse = "0.7.1"
prometheus-client = "0.24.1"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["brotli", "deflate", "gzip", "hickory-dns", "native-tls-vendored", "zstd"] }
rustls = "0.23.38"
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.11.0"
shadowsocks-crypto = { version = "0.6.2", features = ["v2"] }
socket2 = "0.6.3"
strum = { version = "0.28", features = ["derive"] }
tendril = "0.5.0"
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26.4"
tokio-tun = "0.15.2"
tower-http = { version = "0.6", features = ["compression-full"] }
url = { version = "2.5.8", features = ["serde"] }
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive", "unic"] }
x509-parser = "0.18.1"

[target.'cfg(target_env = "musl")'.dependencies]
aws-lc-rs = { version = "1.16.3", features = ["bindgen"] }

[build-dependencies]
bindgen = "0.72.1"

[dev-dependencies]
matches = "0.1.10"
rstest = "0.26.1"
shadowsocks = { version = "1.24.0", features = ["aead-cipher-2022"] }
